--- a/assets/settings.html
+++ b/assets/settings.html
@@ -215,16 +215,20 @@
             appearance: {
                 title: 'Appearance', settings: [
                     { key: 'launch_dark_theme', name: 'Dark Theme', description: 'Use dark theme on startup' },
+                    { key: 'vibrant_window_theme', name: 'Vibrant Window', description: 'Color window frame' },
                     { key: 'experimental_transparent_toolbar', name: 'Transparent Toolbar', description: 'Experimental glass effect' },
-                    { key: 'experimental_compact_tabs', name: 'Compact Tabs', description: 'Reduce tab height' },
-                    { key: 'vibrant_window_theme', name: 'Vibrant Window', description: 'Color window frame' }
+                    { key: 'experimental_compact_tabs', name: 'Compact Tabs', description: 'Reduce tab height' }
                 ]
             },
             privacy: {
                 title: 'Privacy & Security', settings: [
                     { key: 'enable_adblock', name: 'Ad Blocking', description: 'Block ads and trackers' },
                     { key: 'log_blocked_requests', name: 'Log Blocked Requests', description: 'Show blocked in console' },
-                    { key: 'clear_history_on_exit', name: 'Clear History on Exit', description: 'Delete history when closing' }
+                    { key: 'clear_history_on_exit', name: 'Clear History on Exit', description: 'Delete history when closing' },
+                    { key: 'enable_javascript', name: 'Enable JavaScript', description: 'Allow JavaScript execution' },
+                    { key: 'enable_web_security', name: 'Web Security', description: 'Enforce same-origin policy' },
+                    { key: 'block_third_party_cookies', name: 'Block Third-Party Cookies', description: 'Prevent cross-site tracking' },
+                    { key: 'do_not_track', name: 'Do Not Track', description: 'Send DNT header' }
                 ]
             },
             suggestions: {
@@ -236,13 +240,29 @@
             downloads: {
                 title: 'Downloads', settings: [
                     { key: 'show_download_badge', name: 'Download Badge', description: 'Show active download count' },
-                    { key: 'auto_open_download_panel', name: 'Auto-open Panel', description: 'Open downloads panel auto' }
+                    { key: 'auto_open_download_panel', name: 'Auto-open Panel', description: 'Open downloads panel auto' },
+                    { key: 'ask_download_location', name: 'Ask Where to Save', description: 'Show file picker for downloads' }
+                ]
+            },
+            performance: {
+                title: 'Performance', settings: [
+                    { key: 'smooth_scrolling', name: 'Smooth Scrolling', description: 'Enable animated scrolling' },
+                    { key: 'hardware_acceleration', name: 'Hardware Acceleration', description: 'Use GPU for rendering' },
+                    { key: 'enable_local_storage', name: 'Local Storage', description: 'Allow websites to store data' },
+                    { key: 'enable_database', name: 'Database Storage', description: 'Enable IndexedDB and Web SQL' }
                 ]
             },
             accessibility: {
                 title: 'Accessibility', settings: [
                     { key: 'reduce_motion', name: 'Reduce Motion', description: 'Minimize animations' },
-                    { key: 'high_contrast_ui', name: 'High Contrast', description: 'Increase contrast' }
+                    { key: 'high_contrast_ui', name: 'High Contrast', description: 'Increase contrast' },
+                    { key: 'enable_caret_browsing', name: 'Caret Browsing', description: 'Navigate with keyboard cursor' }
+                ]
+            },
+            developer: {
+                title: 'Developer', settings: [
+                    { key: 'enable_remote_inspector', name: 'Remote Inspector', description: 'Enable Chrome DevTools Protocol' },
+                    { key: 'show_performance_overlay', name: 'Performance Overlay', description: 'Show FPS counter' }
                 ]
             }
         };
