--- a/assets/ui.html
+++ b/assets/ui.html
@@ -77,7 +77,7 @@
         </span>
         <!-- AdBlock toggle icon -->
         <span id="toggle-adblock" class="icon" role="button" tabindex="0" aria-label="Toggle ad blocking"
-            data-tooltip="Ad Blocking">
+            data-tooltip="AdBlock">
             <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                 <path d="M12 2L4 5v6.09c0 5.06 3.43 9.8 8 10.91c4.57-1.11 8-5.85 8-10.91V5l-8-3z" fill="currentColor" />
             </svg>
