Enhance Settings UI/UX and make some tweaks
Introduces Ctrl+J to open Downloads and Ctrl+, to open Settings, updating menu labels, shortcuts configuration, and UI logic to support these actions. Also clarifies experimental status and restart requirement for some appearance settings.

--- a/assets/settings.html
+++ b/assets/settings.html
@@ -301,10 +301,10 @@
         const settingsDefinitions = {
             appearance: {
                 title: 'Appearance', settings: [
-                    { key: 'launch_dark_theme', name: 'Dark Theme', description: 'Use dark theme on startup' },
+                    { key: 'launch_dark_theme', name: 'Dark Theme (experimental)', description: 'Use dark theme on startup' },
                     { key: 'vibrant_window_theme', name: 'Vibrant Window', description: 'Color window frame' },
-                    { key: 'experimental_transparent_toolbar', name: 'Transparent Toolbar', description: 'Experimental glass effect' },
-                    { key: 'experimental_compact_tabs', name: 'Compact Tabs', description: 'Reduce tab height' }
+                    { key: 'experimental_transparent_toolbar', name: 'Transparent Toolbar (experimental)', description: 'Experimental glass effect' },
+                    { key: 'experimental_compact_tabs', name: 'Compact Tabs (needs restart)', description: 'Reduce tab height' }
                 ]
             },
             privacy: {
