--- a/assets/menu.html
+++ b/assets/menu.html
@@ -63,8 +63,8 @@
             </div>
             <div class="menu-separator"></div>
             <div class="menu-item" data-action="history">History [Ctrl+H]</div>
-            <div class="menu-item" data-action="downloads">Downloads</div>
-            <div class="menu-item" data-action="settings">Settings</div>
+            <div class="menu-item" data-action="downloads">Downloads [Ctrl+J]</div>
+            <div class="menu-item" data-action="settings">Settings [Ctrl+,]</div>
         </div>
     </div>
 
