Improve DOM clearing and add NSIS log parsing script
Replaces innerHTML='' with iterative child removal in multiple HTML files to avoid layout thrash and improve performance. Adds a PowerShell script to parse NSIS/CPack logs and integrates it into the Windows build workflow for better error diagnostics. Also fixes minor C++ issues: moves Env.h include and adds getcwd error handling.

--- a/assets/contextmenu.html
+++ b/assets/contextmenu.html
@@ -9,6 +9,7 @@
     * {
       transition: all 0.2s ease-in-out;
     }
+
     body {
       background: transparent;
       margin: 0;
@@ -124,7 +125,8 @@
     // Called by native with absolute window coords and info JSON
     function setupContextMenu(x, y, infoJson) {
       const menu = document.getElementById('ctx-menu');
-      menu.innerHTML = '';
+      // Clear menu items efficiently
+      while (menu.firstChild) menu.removeChild(menu.firstChild);
 
       let info = {};
       try { info = JSON.parse(String(infoJson || '{}')); } catch (_) { }
