--- a/assets/history.html
+++ b/assets/history.html
@@ -146,7 +146,8 @@
         function render(data) {
             const list = document.getElementById('history-list');
             const empty = document.getElementById('empty');
-            list.innerHTML = '';
+            // Remove child nodes iteratively to avoid layout thrash from innerHTML
+            while (list.firstChild) list.removeChild(list.firstChild);
             const items = (data && data.items) || [];
             if (!items.length) {
                 empty.style.display = 'block';
